src/test/ui/consts/recursive.stderr
warning: function cannot return without recursing
  --> $DIR/recursive.rs:3:1
   |
LL | const fn f<T>(x: T) {
   | ^^^^^^^^^^^^^^^^^^^ cannot return without recursing
LL |     f(x);
   |     ---- recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error[E0080]: evaluation of constant value failed
  --> $DIR/recursive.rs:4:5
   |
LL |     f(x);
   |     ^^^^
   |     |
   |     reached the configured maximum number of stack frames
   |     inside `f::<i32>` at $DIR/recursive.rs:4:5
   |     [... 126 additional calls inside `f::<i32>` at $DIR/recursive.rs:4:5 ...]
...
LL | const X: () = f(1);
   |               ---- inside `X` at $DIR/recursive.rs:8:15

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
